--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "SumitGA",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.4"
   },
   "devDependencies": {
